--- a/package.json
+++ b/package.json
@@ -9,18 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@faker-js/faker": "^8.4.1",
+    "@tanstack/react-table": "^8.16.0",
+    "clsx": "^2.1.0",
+    "i": "^0.3.7",
+    "next": "14.2.1",
+    "npm": "^10.5.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.1"
+    "react-icons": "^5.1.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.1"
+    "typescript": "^5"
   }
 }
