--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@faker-js/faker": "^8.4.1",
+    "@nextui-org/react": "^2.2.10",
     "@tanstack/react-table": "^8.16.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.28",
     "i": "^0.3.7",
     "next": "14.2.1",
     "npm": "^10.5.2",
